# prefect-hpc-worker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
src/slurm_worker/: nersc_worker.py  worker.py
src/slurm_worker/templates/: default_cpu.txt
